Added Robot Crane Sprites

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Sprites/SourceTextures
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -163,7 +163,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Sprites
+ContentBrowserTab2.SelectedPaths=/Game/Sprites/SourceTextures
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -177,7 +177,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Swamp
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1718,31 +1718,31 @@ SequencerWidgets.TimeStamp=2021.03.19-17.33.21
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/Levels/MainMenu/MainMenu
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/Maps/Swamp
+MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sprites/Mushroom_Trunk_Medium
-MRUItem1=/Game/Sprites/Mushroom_Red_Top
-MRUItem2=/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1
-MRUItem3=/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4
-MRUItem4=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_8
-MRUItem5=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_5
-MRUItem6=/Game/Sprites/SourceTextures/ice-pillar_Sprite_0
-MRUItem7=/Game/Maps/Swamp
-MRUItem8=/Game/Sprites/treetop_Mat
-MRUItem9=/Game/Sprites/Mushroom_Trunk_Short
-MRUItem10=/Game/Sprites/SourceTextures/mushroom-trunk
-MRUItem11=/Game/Sprites/SourceTextures/mushroom-top
-MRUItem12=/Game/Sprites/SourceTextures/cattails
-MRUItem13=/Game/Sprites/SourceTextures/mushrooms
-MRUItem14=/Game/Sprites/Mushroom_Red_Tiny
-MRUItem15=/Game/Sprites/Mushroom_top
-MRUItem16=/Game/Sprites/cattails_Array
-MRUItem17=/Game/Levels/MainMenu/MainMenu
-MRUItem18=/Game/UI/MainMenu
-MRUItem19=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/Sprites/SourceTextures/crane
+MRUItem1=/Game/Sprites/Mushroom_Trunk_Medium
+MRUItem2=/Game/Sprites/Mushroom_Red_Top
+MRUItem3=/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1
+MRUItem4=/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4
+MRUItem5=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_8
+MRUItem6=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_5
+MRUItem7=/Game/Sprites/SourceTextures/ice-pillar_Sprite_0
+MRUItem8=/Game/Maps/Swamp
+MRUItem9=/Game/Sprites/treetop_Mat
+MRUItem10=/Game/Sprites/Mushroom_Trunk_Short
+MRUItem11=/Game/Sprites/SourceTextures/mushroom-trunk
+MRUItem12=/Game/Sprites/SourceTextures/mushroom-top
+MRUItem13=/Game/Sprites/SourceTextures/cattails
+MRUItem14=/Game/Sprites/SourceTextures/mushrooms
+MRUItem15=/Game/Sprites/Mushroom_Red_Tiny
+MRUItem16=/Game/Sprites/Mushroom_top
+MRUItem17=/Game/Sprites/cattails_Array
+MRUItem18=/Game/Levels/MainMenu/MainMenu
+MRUItem19=/Game/UI/MainMenu
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -1769,6 +1769,7 @@ None=======
 /Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1.Mushroom_Medium_Skirt1=1
 /Game/Sprites/Mushroom_Trunk_Medium.Mushroom_Trunk_Medium=1
 /Game/Sprites/Mushroom_Red_Top.Mushroom_Red_Top=1
+/Game/Sprites/SourceTextures/crane.crane=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
