--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,6 +22,7 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -148,7 +149,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -878,13 +879,44 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+CharacterMovementComponent.AssetUserData=True
+CharacterMovementComponent.Collision=True
+Crane_C.Tick=True
+Crane_C.Replication=True
+Crane_C.Rendering=True
+Crane_C.Collision=True
+Crane_C.Actor=True
+Crane_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Collision=True
+TriggerBox.Physics=True
+TriggerBox.Navigation=True
+TriggerBox.Shape=True
+TriggerBox.TransformCommon=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
+Crane_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=204.000 Y=8.000
-WindowSize=X=1273.333 Y=713.333
+WindowSize=X=1275.200 Y=715.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -901,7 +933,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/danny/Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1752,26 +1784,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Swamp
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Crane
 MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Sprites/SourceTextures/crane
-MRUItem3=/Game/Sprites/Mushroom_Trunk_Medium
-MRUItem4=/Game/Sprites/Mushroom_Red_Top
-MRUItem5=/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1
-MRUItem6=/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4
-MRUItem7=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_8
-MRUItem8=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_5
-MRUItem9=/Game/Sprites/SourceTextures/ice-pillar_Sprite_0
-MRUItem10=/Game/Sprites/treetop_Mat
-MRUItem11=/Game/Sprites/Mushroom_Trunk_Short
-MRUItem12=/Game/Sprites/SourceTextures/mushroom-trunk
-MRUItem13=/Game/Sprites/SourceTextures/mushroom-top
-MRUItem14=/Game/Sprites/SourceTextures/cattails
-MRUItem15=/Game/Sprites/SourceTextures/mushrooms
-MRUItem16=/Game/Sprites/Mushroom_Red_Tiny
-MRUItem17=/Game/Sprites/Mushroom_top
-MRUItem18=/Game/Sprites/cattails_Array
-MRUItem19=/Game/Levels/MainMenu/MainMenu
+MRUItem2=/Game/Maps/Swamp
+MRUItem3=/Game/Sprites/SourceTextures/crane
+MRUItem4=/Game/Sprites/Mushroom_Trunk_Medium
+MRUItem5=/Game/Sprites/Mushroom_Red_Top
+MRUItem6=/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1
+MRUItem7=/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4
+MRUItem8=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_8
+MRUItem9=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_5
+MRUItem10=/Game/Sprites/SourceTextures/ice-pillar_Sprite_0
+MRUItem11=/Game/Sprites/treetop_Mat
+MRUItem12=/Game/Sprites/Mushroom_Trunk_Short
+MRUItem13=/Game/Sprites/SourceTextures/mushroom-trunk
+MRUItem14=/Game/Sprites/SourceTextures/mushroom-top
+MRUItem15=/Game/Sprites/SourceTextures/cattails
+MRUItem16=/Game/Sprites/SourceTextures/mushrooms
+MRUItem17=/Game/Sprites/Mushroom_Red_Tiny
+MRUItem18=/Game/Sprites/Mushroom_top
+MRUItem19=/Game/Sprites/cattails_Array
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -1799,6 +1831,7 @@ None=======
 /Game/Sprites/Mushroom_Trunk_Medium.Mushroom_Trunk_Medium=1
 /Game/Sprites/Mushroom_Red_Top.Mushroom_Red_Top=1
 /Game/Sprites/SourceTextures/crane.crane=1
+/Game/ThirdPersonBP/Blueprints/Crane.Crane=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1837,6 +1870,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Sprites/Lilypad_Cluster.Lilypad_Cluster;
 RecentlyPlaced=/Game/Sprites/Lilypad_Small.Lilypad_Small;
 RecentlyPlaced=/Game/Sprites/Lilypad_Large.Lilypad_Large;
@@ -1854,9 +1890,6 @@ RecentlyPlaced=/Game/Sprites/froghouse-front_Sprite.froghouse-front_Sprite;
 RecentlyPlaced=/Game/Sprites/SourceTextures/froghouse-front.froghouse-front;
 RecentlyPlaced=/Game/Sprites/Ice_Pillar_Top.Ice_Pillar_Top;
 RecentlyPlaced=/Game/Sprites/Ice_Pillar_Side2.Ice_Pillar_Side2;
-RecentlyPlaced=/Game/Sprites/Ice_Pillar_Side1.Ice_Pillar_Side1;
-RecentlyPlaced=/Game/Sprites/Mushroom_Large_Skirt3.Mushroom_Large_Skirt3;
-RecentlyPlaced=/Game/Sprites/Mushroom_Large_Skirt2.Mushroom_Large_Skirt2;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1875,10 +1908,10 @@ GeomModifier="\"Object.Settings\" "
 Object=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
-CharacterMovementComponent=
-PawnMovementComponent=
-NavMovementComponent=
-MovementComponent=
+CharacterMovementComponent="\"Object.RotationRate\" "
+PawnMovementComponent="\"Object.RotationRate\" "
+NavMovementComponent="\"Object.RotationRate\" "
+MovementComponent="\"Object.RotationRate\" "
 ActorComponent=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
@@ -1894,6 +1927,9 @@ PaperSpriteActor=
 PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2058,6 +2094,10 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Glide,Input
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+ThirdPersonCharacter_C=
+CharacterMovementComponent=
+Crane_C=
 
 [UMGEditor.Designer]
 PreviewWidth=1280
