Finished mountain blockout and imported more swamp assets

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -149,7 +149,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Sprites/SourceTextures
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -164,7 +164,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Sprites/SourceTextures
+ContentBrowserTab2.SelectedPaths=/Game/Sprites
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -1870,6 +1870,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites/log_Sprite.log_Sprite;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -1889,7 +1890,6 @@ RecentlyPlaced=/Game/Sprites/froghouse-stilt_Sprite.froghouse-stilt_Sprite;
 RecentlyPlaced=/Game/Sprites/froghouse-front_Sprite.froghouse-front_Sprite;
 RecentlyPlaced=/Game/Sprites/SourceTextures/froghouse-front.froghouse-front;
 RecentlyPlaced=/Game/Sprites/Ice_Pillar_Top.Ice_Pillar_Top;
-RecentlyPlaced=/Game/Sprites/Ice_Pillar_Side2.Ice_Pillar_Side2;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2160,4 +2160,15 @@ FrameNumberDisplayFormat=Seconds
 
 [MessageLog]
 LastLogListing=PIE
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
 
