Moving crane head... kinda...

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -178,7 +178,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Swamp
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -910,13 +910,29 @@ TriggerBox.Input=True
 TriggerBox.Actor=True
 K2Node_Timeline.GraphNodeDetail=True
 Crane_C.TransformCommon=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+Crane_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=204.000 Y=8.000
-WindowSize=X=1281.333 Y=721.333
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -933,7 +949,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/danny/Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/ThirdPersonBP/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1779,14 +1795,14 @@ SequencerWidgets.TimeStamp=2021.03.19-17.33.21
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Maps/Swamp
+MRUItem0=/Game/Maps/Swamp
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Maps/Swamp
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Maps/Swamp
 MRUItem3=/Game/Sprites/SourceTextures/crane
 MRUItem4=/Game/Sprites/Mushroom_Trunk_Medium
 MRUItem5=/Game/Sprites/Mushroom_Red_Top
@@ -1870,9 +1886,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
 RecentlyPlaced=/Game/Sprites/log_Sprite.log_Sprite;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Sprites/Lilypad_Cluster.Lilypad_Cluster;
 RecentlyPlaced=/Game/Sprites/Lilypad_Small.Lilypad_Small;
@@ -1930,6 +1946,7 @@ MaterialExpression=
 ThirdPersonCharacter_C=
 Character=
 Pawn=
+Crane_C=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
