Moving crane head

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -926,13 +926,28 @@ BoxComponent.Events=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 Crane_C.Default=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+PaperFlipbookComponent.MaterialParameters=False
+PaperFlipbookComponent.HLOD=False
+PaperFlipbookComponent.Mobile=False
+PaperFlipbookComponent.AssetUserData=False
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=204.000 Y=8.000
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
