--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -1531,13 +1531,28 @@ Leaf_Cluster2_Blueprint_C.Rendering=True
 Leaf_Cluster2_Blueprint_C.Collision=True
 Leaf_Cluster2_Blueprint_C.Actor=True
 Leaf_Cluster2_Blueprint_C.Input=True
+Spawnpoint_C.Tick=True
+Spawnpoint_C.Replication=True
+Spawnpoint_C.Rendering=True
+Spawnpoint_C.Collision=True
+Spawnpoint_C.Actor=True
+Spawnpoint_C.Input=True
+K2Node_CustomEvent.GraphNodeDetail=True
+Spawnpoint_C.TransformCommon=True
+Spawnpoint_Start_C.Tick=True
+Spawnpoint_Start_C.Replication=True
+Spawnpoint_Start_C.Rendering=True
+Spawnpoint_Start_C.Collision=True
+Spawnpoint_Start_C.Actor=True
+Spawnpoint_Start_C.Input=True
+Spawnpoint_Start_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-1476.000 Y=-37.000
-WindowSize=X=1284.000 Y=724.000
+ScreenPosition=X=632.667 Y=332.667
+WindowSize=X=1287.333 Y=727.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1554,7 +1569,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=C:/Users/danny/Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2398,6 +2413,24 @@ TextureEditor.TimeStamp=2021.03.09-16.56.42
 TextureEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2021.03.19-17.33.21
 SequencerWidgets.LastCompileMethod=Unknown
+HairStrandsCore.TimeStamp=2021.03.18-12.56.38
+HairStrandsCore.LastCompileMethod=Unknown
+StylusInput.TimeStamp=2021.03.18-12.46.33
+StylusInput.LastCompileMethod=Unknown
+ModelingComponents.TimeStamp=2021.03.18-12.49.22
+ModelingComponents.LastCompileMethod=Unknown
+ModelingOperators.TimeStamp=2021.03.18-12.49.22
+ModelingOperators.LastCompileMethod=Unknown
+ModelingOperatorsEditorOnly.TimeStamp=2021.03.18-12.49.22
+ModelingOperatorsEditorOnly.LastCompileMethod=Unknown
+MeshModelingTools.TimeStamp=2021.03.18-12.49.21
+MeshModelingTools.LastCompileMethod=Unknown
+MeshModelingToolsEditorOnly.TimeStamp=2021.03.18-12.49.22
+MeshModelingToolsEditorOnly.LastCompileMethod=Unknown
+ModelingToolsEditorMode.TimeStamp=2021.03.18-12.49.28
+ModelingToolsEditorMode.LastCompileMethod=Unknown
+HairStrandsEditor.TimeStamp=2021.03.18-12.56.38
+HairStrandsEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Swamp
@@ -2405,26 +2438,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem2=/Game/Sprites/FoliageActors/Leaf_Cluster2_Foliage
-MRUItem3=/Game/Sprites/FoliageActors/Leaf_Cluster2_Blueprint
-MRUItem4=/Game/Sprites/FoliageActors/Leaf_Cluster_Blueprint
-MRUItem5=/Game/Sprites/FoliageActors/Leaf_Cluster_Big_Foliage
-MRUItem6=/Game/Sprites/FoliageActors/Leaf_Cluster_Small_Blueprint
-MRUItem7=/Game/Sprites/Leaf_Cluster_Big_Blueprint
-MRUItem8=/Game/Sprites/leaf_cluster_1_Sprite
-MRUItem9=/Game/TreeLeaves
-MRUItem10=/Game/TreeTrunk
-MRUItem11=/Game/Sprites/FoliageActors/Mushroom_Brown_Small2_Blueprint
-MRUItem12=/Game/Sprites/FoliageActors/Mushroom_Brown_Small1_Blueprint
-MRUItem13=/Game/Sprites/FoliageActors/Mushroom_Brown_Tiny_Blueprint
-MRUItem14=/Game/Sprites/FoliageActors/Mushroom_White_Tiny_Blueprint
-MRUItem15=/Game/Sprites/Grass1_Blueprint
-MRUItem16=/Game/Sprites/Grass3_Blueprint
-MRUItem17=/Game/Sprites/Grass2_Blueprint
-MRUItem18=/Game/Sprites/Cattail_Straight_Blueprint
-MRUItem19=/Game/Sprites/Cattail_Medium_Blueprint
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Spawnpoint
+MRUItem1=/Game/Maps/Swamp
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Start
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem5=/Game/Sprites/FoliageActors/Leaf_Cluster2_Foliage
+MRUItem6=/Game/Sprites/FoliageActors/Leaf_Cluster2_Blueprint
+MRUItem7=/Game/Sprites/FoliageActors/Leaf_Cluster_Blueprint
+MRUItem8=/Game/Sprites/FoliageActors/Leaf_Cluster_Big_Foliage
+MRUItem9=/Game/Sprites/FoliageActors/Leaf_Cluster_Small_Blueprint
+MRUItem10=/Game/Sprites/Leaf_Cluster_Big_Blueprint
+MRUItem11=/Game/Sprites/leaf_cluster_1_Sprite
+MRUItem12=/Game/TreeLeaves
+MRUItem13=/Game/TreeTrunk
+MRUItem14=/Game/Sprites/FoliageActors/Mushroom_Brown_Small2_Blueprint
+MRUItem15=/Game/Sprites/FoliageActors/Mushroom_Brown_Small1_Blueprint
+MRUItem16=/Game/Sprites/FoliageActors/Mushroom_Brown_Tiny_Blueprint
+MRUItem17=/Game/Sprites/FoliageActors/Mushroom_White_Tiny_Blueprint
+MRUItem18=/Game/Sprites/Grass1_Blueprint
+MRUItem19=/Game/Sprites/Grass3_Blueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2505,6 +2538,8 @@ None=======
 /Game/Sprites/FoliageActors/Bush2_Foliage.Bush2_Foliage=1
 /Game/Sprites/FoliageActors/Mushroom_White_Tiny_Blueprint.Mushroom_White_Tiny_Blueprint=1
 /Game/Sprites/FoliageActors/Mushroom_Brown_Tiny_Blueprint.Mushroom_Brown_Tiny_Blueprint=1
+/Game/ThirdPersonBP/Blueprints/Spawnpoint_Start.Spawnpoint_Start=1
+/Game/ThirdPersonBP/Blueprints/Spawnpoint.Spawnpoint=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2543,6 +2578,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Spawnpoint.Spawnpoint;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Start.Spawnpoint_Start;
 RecentlyPlaced=/Game/Sprites/leaf_cluster_2_Sprite.leaf_cluster_2_Sprite;
 RecentlyPlaced=/Game/Sprites/leaf_cluster_1_Sprite.leaf_cluster_1_Sprite;
 RecentlyPlaced=/Game/Sprites/LARGEbush4_Sprite.LARGEbush4_Sprite;
@@ -2561,8 +2598,6 @@ RecentlyPlaced=/Game/Sprites/FoliageActors/Cattail_Straight_Blueprint.Cattail_St
 RecentlyPlaced=/Game/Sprites/Mushroom_White_Tiny.Mushroom_White_Tiny;
 RecentlyPlaced=/Game/Sprites/Mushroom_Brown_Tiny.Mushroom_Brown_Tiny;
 RecentlyPlaced=/Game/Sprites/Mushroom_Brown_Small2.Mushroom_Brown_Small2;
-RecentlyPlaced=/Game/Sprites/Mushroom_Brown_Small1.Mushroom_Brown_Small1;
-RecentlyPlaced=/Game/Sprites/FoliageActors/Mushroom_Red_Small_Blueprint.Mushroom_Red_Small_Blueprint;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2802,6 +2837,8 @@ Crane_C=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Collision.Collision,
 ModelingToolsEditorModeSettings=InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
+Spawnpoint_C=
+Spawnpoint_Start_C=
 
 [UMGEditor.Designer]
 PreviewWidth=1280
